Close #20, close #23, fix navbar spacing on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,11 @@ img.blur {
         width: 80%;
     }
 }
+@media only screen and (max-width: 400px) {
+    nav .container {
+        width: 95%;
+    }
+}
 
 /* Center the bio picture titles */
 
